execdoc-kb logic